@@ -10,6 +10,6 @@ public class ResourceNotFoundException extends RuntimeException {
     }
 
     public ResourceNotFoundException(String resourceName, String fieldName, Object fieldValue) {
-        super(String.format("%s not found with %s : '%s'", resourceName, fieldName, fieldValue));
+        super("%s not found with %s : '%s'".formatted(resourceName, fieldName, fieldValue));
     }
 }
